--- a/my-aktion/src/main/resources/messages_en.properties
+++ b/my-aktion/src/main/resources/messages_en.properties
@@ -46,3 +46,5 @@ listDonations.donation_amount=Donation amount
 listDonations.receipt=Receipt
 listDonations.yes=yes
 listDonations.no=no
+listDonations.status.TRANSFERRED=transferred
+listDonations.status.IN_PROCESS=in process
