"Vielen Dank" Faces-Nachricht externalisiert

--- a/my-aktion/src/main/resources/messages_de.properties
+++ b/my-aktion/src/main/resources/messages_de.properties
@@ -6,6 +6,7 @@ donateMoney.name_of_bank=Name der Bank
 donateMoney.donation_amount=Spendenbetrag
 donateMoney.i_want_a_receipt=Ja, ich möchte eine Spendenquittung
 donateMoney.donate=Spenden
+donateMoney.thank_you=Vielen Dank für die Spende!
 # editCampaign.xhtml
 editCampaign.add_new_campaign=Neue Aktion anlegen
 editCampaign.edit_campaign=Aktionsdaten editieren
