--- a/my-aktion/src/main/resources/messages_en.properties
+++ b/my-aktion/src/main/resources/messages_en.properties
@@ -6,6 +6,7 @@ donateMoney.name_of_bank=Name of bank
 donateMoney.donation_amount=Donation amount
 donateMoney.i_want_a_receipt=Yes, I would like a donation receipt
 donateMoney.donate=Donate
+donateMoney.thank_you=Thank you for your donation!
 # editCampaign.xhtml
 editCampaign.add_new_campaign=Add a new campaign
 editCampaign.edit_campaign=Edit campaign
