Uebersetzung fuer Status hinzugefuegt, Faclets aufgerauemt

--- a/my-aktion/src/main/resources/messages_en.properties
+++ b/my-aktion/src/main/resources/messages_en.properties
@@ -47,5 +47,6 @@ listDonations.donation_amount=Donation amount
 listDonations.receipt=Receipt
 listDonations.yes=yes
 listDonations.no=no
+listDonations.status=Status
 listDonations.status.TRANSFERRED=transferred
 listDonations.status.IN_PROCESS=in process
