--- a/my-aktion/src/main/resources/messages_de.properties
+++ b/my-aktion/src/main/resources/messages_de.properties
@@ -47,5 +47,6 @@ listDonations.donation_amount=Spendenbetrag
 listDonations.receipt=Quittung
 listDonations.yes=ja
 listDonations.no=nein
+listDonations.status=Status
 listDonations.status.TRANSFERRED=überwiesen
 listDonations.status.IN_PROCESS=in Bearbeitung
