--- a/my-aktion/src/main/resources/messages_de.properties
+++ b/my-aktion/src/main/resources/messages_de.properties
@@ -37,6 +37,10 @@ listCampaigns.edit=Editieren
 listCampaigns.list_donations=Spendenliste
 listCampaigns.form=Formular
 listCampaigns.add_campaign=Aktion hinzufügen
+listCampaigns.ask_delete_campaign=Aktion wirklich löschen?
+listCampaigns.delete_campaign=Aktion löschen
+listCampaigns.yes=Ja
+listCampaigns.no=Nein
 # listDonations.xhtml
 listDonations.donation_list=Spenderliste
 listDonations.beneficiary_account=Empfängerkonto
