--- a/my-aktion/src/main/resources/messages_en.properties
+++ b/my-aktion/src/main/resources/messages_en.properties
@@ -37,6 +37,10 @@ listCampaigns.edit=Edit
 listCampaigns.list_donations=List donations
 listCampaigns.form=Form
 listCampaigns.add_campaign=Add campaign
+listCampaigns.ask_delete_campaign=Really delete campaign?
+listCampaigns.delete_campaign=Delete campaign
+listCampaigns.yes=Yes
+listCampaigns.no=No
 # listDonations.xhtml
 listDonations.donation_list=List of donations
 listDonations.beneficiary_account=Beneficiary account
