--- a/my-aktion/src/main/resources/ValidationMessages_de.properties
+++ b/my-aktion/src/main/resources/ValidationMessages_de.properties
@@ -13,3 +13,7 @@ donation.donorName.size=Der Name eines Spenders muss min. {min} und darf max. {m
 account.name.size=Der Name des Besitzers eines Kontos muss min. {min} und darf max. {max} Zeichen lang sein.
 account.nameOfBank.size=Der Name einer Bank muss min. {min} und darf max. {max} Zeichen lang sein.
 account.iban.pattern=Eine IBAN besteht aus zwei Buchstaben, gefolgt von zwei Ziffern und 12 bis 30 alphanumerischen Zeichen.
+# organizer model
+organizer.firstName.size=Der Vorname eines Organisators muss min. {min} und darf max. {max} Zeichen lang sein.
+organizer.lastName.size=Der Nachname eines Organisators muss min. {min} und darf max. {max} Zeichen lang sein.
+organizer.email.pattern=Bitte eine valide E-Mail-Adresse angeben.
