--- a/my-aktion/src/main/resources/ValidationMessages_en.properties
+++ b/my-aktion/src/main/resources/ValidationMessages_en.properties
@@ -13,3 +13,7 @@ donation.donorName.size=The donor's name must be between {min} and {max} charact
 account.name.size=The name of the account owner must be between {min} and {max} characters long.
 account.nameOfBank.size=The name of a bank must be between {min} and {max} characters long.
 account.iban.pattern=An IBAN contains of two letters, followed by two digits and between 12 and 30 alphanumeric characters.
+# organizer model
+organizer.firstName.size=The first name of an organizer must be between {min} and {max} characters long.
+organizer.lastName.size=The last name of an organizer must be between {min} and {max} characters long.
+organizer.email.pattern=Please enter a valid email address.
