--- a/my-aktion/src/main/resources/messages_de.properties
+++ b/my-aktion/src/main/resources/messages_de.properties
@@ -51,5 +51,10 @@ listDonations.no=nein
 listDonations.status=Status
 listDonations.status.TRANSFERRED=überwiesen
 listDonations.status.IN_PROCESS=in Bearbeitung
+# login.xhtml
+login.email=E-Mail
+login.password=Passwort
+login.login=Anmelden
+login.errorMsg=E-Mail oder Passwort sind falsch. Bitte überprüfen Sie Ihre Angaben.
 # log messages
 log.donateMoney.thank_you={0} hat {1} Euro gespendet.
