--- a/my-aktion/src/main/resources/messages_en.properties
+++ b/my-aktion/src/main/resources/messages_en.properties
@@ -51,5 +51,10 @@ listDonations.no=no
 listDonations.status=Status
 listDonations.status.TRANSFERRED=transferred
 listDonations.status.IN_PROCESS=in process
+# login.xhtml
+login.email=Email
+login.password=Password
+login.login=Log in
+login.errorMsg=You've entered a wrong email or password. Please check your input.
 # log messages
 log.donateMoney.thank_you={0} has donated {1} Euro.
