--- a/my-aktion/src/main/resources/messages_de.properties
+++ b/my-aktion/src/main/resources/messages_de.properties
@@ -58,3 +58,5 @@ login.login=Anmelden
 login.errorMsg=E-Mail oder Passwort sind falsch. Bitte überprüfen Sie Ihre Angaben.
 # log messages
 log.donateMoney.thank_you={0} hat {1} Euro gespendet.
+log.transferDonation.start=Zu bearbeitende Spenden werden überwiesen.
+log.transferDonation.done=Es wurden {0} Spenden überwiesen.
