--- a/my-aktion/src/main/resources/messages_en.properties
+++ b/my-aktion/src/main/resources/messages_en.properties
@@ -58,3 +58,5 @@ login.login=Log in
 login.errorMsg=You've entered a wrong email or password. Please check your input.
 # log messages
 log.donateMoney.thank_you={0} has donated {1} Euro.
+log.transferDonation.start=Starting transfering donations.
+log.transferDonation.done={0} donations have been transfered.
